[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/ConsolaMono-Book.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/close.svg" type="Texture" id=2]
[ext_resource path="res://scenes/select_song_menu/search_form.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 10.0
bg_color = Color( 0.184314, 0.184314, 0.184314, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 10.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="SearchForm" type="VBoxContainer"]
margin_right = 604.0
margin_bottom = 139.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_right = 604.0
margin_bottom = 69.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
text = "Local Search"

[node name="LineEdit" type="LineEdit" parent="."]
margin_top = 73.0
margin_right = 604.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 2 )
custom_icons/clear = ExtResource( 2 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
clear_button_enabled = true

[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
